aligning of elements in "search issues"

--- a/sites/all/themes/heardmentalitylight/stylesheets/layout.css
+++ b/sites/all/themes/heardmentalitylight/stylesheets/layout.css
@@ -6371,6 +6371,7 @@ ul.date_filter li a.active:hover, ul.options_filter li a.active:hover {
   font-family : 'DINBoldRegular', 'Open Sans Condensed', Arial, sans-serif;
   font-style  : normal;
   font-weight : normal;
+  vertical-align: bottom;
 }
 
 #issue-search-filter-form select {
@@ -6385,6 +6386,10 @@ ul.date_filter li a.active:hover, ul.options_filter li a.active:hover {
 
 #issue-search-filter-form fieldset {
   margin : 0;
+}
+
+#issue-search-filter-form input[type="checkbox"] {
+  vertical-align: baseline;
 }
 
 #my_region-wrapper,
